[tool.poetry]
name = "comfyui-bfl-api-connect"
version = "0.1.0"
description = "ComfyUI Nodes for connecting to the Black Forest Labs API"
authors = ["None"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pre-commit = "^3.8.0"
ruff = "^0.6.4"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-third-party = []

[tool.black]
line-length = 120
target_version = ['py312']
include = '\.py$'

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
